*Format the document*

--- a/en/Movies/a-fond.html
+++ b/en/Movies/a-fond.html
@@ -23,8 +23,12 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>A family sets off in their brand new minivan early in the morning to avoid traffic for their summer vacation. Tom, the father, engages his electronic cruise control at 130 km/h. Just as a final mistake by Ben, the stepfather, prompts Julia to insist on turning back, Tom realizes he no longer has control over his vehicle. The onboard electronics are unresponsive, and the speed is stuck at 130 km/h.</p>
-    <button><a href="https://mega.nz/file/FJNXgSrI#XlVFxMkvTq_NSpmsn3q7esPOnljd-vkwDFMv_r75Cxs">Watch the movie</a></button>
+    <p>A family sets off in their brand new minivan early in the morning to avoid traffic for their summer vacation.
+        Tom, the father, engages his electronic cruise control at 130 km/h. Just as a final mistake by Ben, the
+        stepfather, prompts Julia to insist on turning back, Tom realizes he no longer has control over his vehicle. The
+        onboard electronics are unresponsive, and the speed is stuck at 130 km/h.</p>
+    <button><a href="https://mega.nz/file/FJNXgSrI#XlVFxMkvTq_NSpmsn3q7esPOnljd-vkwDFMv_r75Cxs">Watch the
+            movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
