--- a/en/Movies/fast&furious8.html
+++ b/en/Movies/fast&furious8.html
@@ -24,9 +24,10 @@
     </nav>
     <h2>Synopsis</h2>
     <p>From the shores of Cuba to the streets of New York and the frozen plains of the Barents Sea,
-        the team will crisscross the globe to try to prevent an anarchist from unleashing global chaos 
+        the team will crisscross the globe to try to prevent an anarchist from unleashing global chaos
         and bring home the man who turned them into a family.</p>
-    <button><a href="https://mega.nz/file/0I0mgLwR#Qt5smOU16QtWduRT1DM3htjf2tP5O6-tw_9ghCrve8o">Watch the movie</a></button>
+    <button><a href="https://mega.nz/file/0I0mgLwR#Qt5smOU16QtWduRT1DM3htjf2tP5O6-tw_9ghCrve8o">Watch the
+            movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
