--- a/en/Movies/geostorm.html
+++ b/en/Movies/geostorm.html
@@ -23,11 +23,12 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>After natural disasters threaten the Earth, 
-        scientists create satellites that can control the climate. 
-        When these satellites malfunction, a designer must work hand in hand 
+    <p>After natural disasters threaten the Earth,
+        scientists create satellites that can control the climate.
+        When these satellites malfunction, a designer must work hand in hand
         with his brother to save the world from a devastating storm.</p>
-    <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Watch the movie</a></button>
+    <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Watch the
+            movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
