--- a/en/Movies/shazam.html
+++ b/en/Movies/shazam.html
@@ -23,13 +23,14 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>We all have a superhero inside us, it just takes a bit of magic to bring it out. 
-        For 14-year-old Billy Batson, a streetwise foster kid, all it takes is shouting Shazam! 
-        to transform into the adult superhero. Teen in a perfect adult body, 
-        Shazam revels in this adult version of himself with the recklessness of a child. 
-        However, he'll need to master his powers quickly to fight 
+    <p>We all have a superhero inside us, it just takes a bit of magic to bring it out.
+        For 14-year-old Billy Batson, a streetwise foster kid, all it takes is shouting Shazam!
+        to transform into the adult superhero. Teen in a perfect adult body,
+        Shazam revels in this adult version of himself with the recklessness of a child.
+        However, he'll need to master his powers quickly to fight
         the dark forces of Dr. Thaddeus Sivana.</p>
-    <button><a href="https://mega.nz/file/YcFWSSJB#yT0fCtrPe74thsWzmgaJQL2OuFphH8LZpJAzO66oSQA">Watch the movie</a></button>
+    <button><a href="https://mega.nz/file/YcFWSSJB#yT0fCtrPe74thsWzmgaJQL2OuFphH8LZpJAzO66oSQA">Watch the
+            movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
