--- a/en/movies.html
+++ b/en/movies.html
@@ -25,13 +25,14 @@
     </nav>
     <h2>Movies available soon on the site:</h2>
     <p>⊛ Fast & Furious 8</p>
-    <p>⊛ Fast & Furious 9</p>  
-    <p>⊛ Shazam! (2019)</p>  
-    <p>⊛ Taxi 5</p>  
-    <p>⊛ Geostorm</p>  
-    <p>⊛ Top Gun: Maverick</p>  
-    <p>⊛ Alibi.Com</p>  
-    <p>⊛ Titanic</p></body>
+    <p>⊛ Fast & Furious 9</p>
+    <p>⊛ Shazam! (2019)</p>
+    <p>⊛ Taxi 5</p>
+    <p>⊛ Geostorm</p>
+    <p>⊛ Top Gun: Maverick</p>
+    <p>⊛ Alibi.Com</p>
+    <p>⊛ Titanic</p>
+</body>
 </body>
 <footer>
     <div class="lang-select">
