--- a/fr/Film/a-fond.html
+++ b/fr/Film/a-fond.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>A Fond - DevHTML-IR</title>  
+    <title>A Fond - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -26,13 +26,14 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>Une famille embarque dans son monospace flambant neuf, au petit matin, 
-        afin d'éviter les embouteillages pour les vacances d'été. 
-        Tom, le père, enclenche son régulateur de vitesse électronique sur 130 km/h. 
-        Au moment où une dernière bourde de Ben, le beau-père, pousse Julia, excédée, 
-        à demander qu'on fasse demi-tour, Tom s'aperçoit qu'il ne contrôle plus son véhicule. 
+    <p>Une famille embarque dans son monospace flambant neuf, au petit matin,
+        afin d'éviter les embouteillages pour les vacances d'été.
+        Tom, le père, enclenche son régulateur de vitesse électronique sur 130 km/h.
+        Au moment où une dernière bourde de Ben, le beau-père, pousse Julia, excédée,
+        à demander qu'on fasse demi-tour, Tom s'aperçoit qu'il ne contrôle plus son véhicule.
         L'électronique de bord ne répond plus, la vitesse est bloquée à 130 km/h.</p>
-        <button><a href="https://mega.nz/file/FJNXgSrI#XlVFxMkvTq_NSpmsn3q7esPOnljd-vkwDFMv_r75Cxs">Voir le film</a></button>
+    <button><a href="https://mega.nz/file/FJNXgSrI#XlVFxMkvTq_NSpmsn3q7esPOnljd-vkwDFMv_r75Cxs">Voir le
+            film</a></button>
 
 </body>
 <footer>
@@ -43,7 +44,7 @@
         </select>
     </div>
     <div class="copyright">
-    © DevHTML-IR - 2023
+        © DevHTML-IR - 2023
     </div>
 </footer>
 
