--- a/fr/Film/fast&furious9.html
+++ b/fr/Film/fast&furious9.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Fast & Furious 9 - DevHTML-IR</title>  
+    <title>Fast & Furious 9 - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -26,12 +26,13 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>Dom Toretto mène une vie tranquille avec Letty et son fils, 
-        mais ils savent que le danger est toujours présent. 
-        Son équipe et lui tentent de mettre fin à un complot mondial ourdi 
-        par l'assassin le plus doué et le pilote le plus performant 
+    <p>Dom Toretto mène une vie tranquille avec Letty et son fils,
+        mais ils savent que le danger est toujours présent.
+        Son équipe et lui tentent de mettre fin à un complot mondial ourdi
+        par l'assassin le plus doué et le pilote le plus performant
         qu'ils aient jamais rencontré: le frère délaissé de Dom.</p>
-        <button><a href="https://mega.nz/file/hdlCRaYA#2Woa6glWtWLcPbrng5gEnKL_05jUdEwPaAoivt7mWv8">Voir le film</a></button>
+    <button><a href="https://mega.nz/file/hdlCRaYA#2Woa6glWtWLcPbrng5gEnKL_05jUdEwPaAoivt7mWv8">Voir le
+            film</a></button>
 
 </body>
 <footer>
@@ -42,7 +43,7 @@
         </select>
     </div>
     <div class="copyright">
-    © DevHTML-IR - 2023
+        © DevHTML-IR - 2023
     </div>
 </footer>
 
