--- a/fr/Film/geostorm.html
+++ b/fr/Film/geostorm.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Geostorm - DevHTML-IR</title>  
+    <title>Geostorm - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -26,11 +26,12 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>Après que des catastrophes naturelles ont menacé la Terre, 
-        des scientifiques ont créé des satellites qui peuvent contrôler le climat. 
-        Le jour où ces satellites ne fonctionnent plus, un designer doit travailler main 
+    <p>Après que des catastrophes naturelles ont menacé la Terre,
+        des scientifiques ont créé des satellites qui peuvent contrôler le climat.
+        Le jour où ces satellites ne fonctionnent plus, un designer doit travailler main
         dans la main avec son frère pour sauver le monde d'une terrible tempête.</p>
-        <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Voir le film</a></button>
+    <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Voir le
+            film</a></button>
 
 </body>
 <footer>
@@ -41,7 +42,7 @@
         </select>
     </div>
     <div class="copyright">
-    © DevHTML-IR - 2023
+        © DevHTML-IR - 2023
     </div>
 </footer>
 
