--- a/fr/Film/shazam.html
+++ b/fr/Film/shazam.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Shazam ! - DevHTML-IR</title>  
+    <title>Shazam ! - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -26,14 +26,15 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>On a tous un super-héros qui sommeille au fond de soi, il faut juste un peu de magie pour le réveiller. 
-        Pour Billy Batson, gamin débrouillard de 14 ans placé dans une famille d'accueil, 
-        il suffit de crier Shazam ! pour se transformer en super-héros. 
-        Ado dans un corps d'adulte sculpté à la perfection, 
-        Shazam repousse les limites de ses facultés avec l'insouciance d'un enfant. 
-        Cependant, il lui faudra maîtriser rapidement ses pouvoirs pour combattre 
+    <p>On a tous un super-héros qui sommeille au fond de soi, il faut juste un peu de magie pour le réveiller.
+        Pour Billy Batson, gamin débrouillard de 14 ans placé dans une famille d'accueil,
+        il suffit de crier Shazam ! pour se transformer en super-héros.
+        Ado dans un corps d'adulte sculpté à la perfection,
+        Shazam repousse les limites de ses facultés avec l'insouciance d'un enfant.
+        Cependant, il lui faudra maîtriser rapidement ses pouvoirs pour combattre
         les forces des ténèbres du Dr Thaddeus Sivana.</p>
-        <button><a href="https://mega.nz/file/YcFWSSJB#yT0fCtrPe74thsWzmgaJQL2OuFphH8LZpJAzO66oSQA">Voir le film</a></button>
+    <button><a href="https://mega.nz/file/YcFWSSJB#yT0fCtrPe74thsWzmgaJQL2OuFphH8LZpJAzO66oSQA">Voir le
+            film</a></button>
 
 </body>
 <footer>
@@ -44,7 +45,7 @@
         </select>
     </div>
     <div class="copyright">
-    © DevHTML-IR - 2023
+        © DevHTML-IR - 2023
     </div>
 </footer>
 
