--- a/fr/Film/taxi-5.html
+++ b/fr/Film/taxi-5.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Taxi 5 - DevHTML-IR</title>  
+    <title>Taxi 5 - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -26,13 +26,15 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>Sylvain Marot, super flic parisien et pilote d'exception, est muté contre son gré à la Police Municipale de Marseille. 
-        L'ex-commissaire Gibert, devenu maire de la ville et au plus bas dans les sondages, 
-        va alors lui confier la mission de stopper le redoutable "Gang des Italiens", 
-        qui écume des bijouteries à l'aide de puissantes Ferrari. 
-        Pour y parvenir, Marot n'aura pas d'autre choix que de collaborer avec le petit-neveu du célèbre Daniel, 
+    <p>Sylvain Marot, super flic parisien et pilote d'exception, est muté contre son gré à la Police Municipale de
+        Marseille.
+        L'ex-commissaire Gibert, devenu maire de la ville et au plus bas dans les sondages,
+        va alors lui confier la mission de stopper le redoutable "Gang des Italiens",
+        qui écume des bijouteries à l'aide de puissantes Ferrari.
+        Pour y parvenir, Marot n'aura pas d'autre choix que de collaborer avec le petit-neveu du célèbre Daniel,
         Eddy Maklouf, le pire chauffeur VTC de Marseille.</p>
-        <button><a href="https://mega.nz/file/cIt1iCbb#UfJN5rvGd5O7WN5QMFLtSpf6dCD_rooHMZxYOpHlpWQ">Voir le film</a></button>
+    <button><a href="https://mega.nz/file/cIt1iCbb#UfJN5rvGd5O7WN5QMFLtSpf6dCD_rooHMZxYOpHlpWQ">Voir le
+            film</a></button>
 
 </body>
 <footer>
@@ -43,7 +45,7 @@
         </select>
     </div>
     <div class="copyright">
-    © DevHTML-IR - 2023
+        © DevHTML-IR - 2023
     </div>
 </footer>
 
