--- a/fr/Film/fast&furious8.html
+++ b/fr/Film/fast&furious8.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Fast & Furious 8 - DevHTML-IR</title>  
+    <title>Fast & Furious 8 - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../../styles.css">
@@ -27,9 +27,10 @@
     </nav>
     <h2>Synopsis</h2>
     <p>Des rivages de Cuba aux rues de New York en passant par les plaines gelées de la mer arctique de Barrents,
-        l'équipe va sillonner le globe pour tenter d'empêcher une anarchiste de déchaîner un chaos mondial 
+        l'équipe va sillonner le globe pour tenter d'empêcher une anarchiste de déchaîner un chaos mondial
         et de ramener à la maison l'homme qui a fait d'eux une famille..</p>
-        <button><a href="https://mega.nz/file/0I0mgLwR#Qt5smOU16QtWduRT1DM3htjf2tP5O6-tw_9ghCrve8o">Voir le film</a></button>
+    <button><a href="https://mega.nz/file/0I0mgLwR#Qt5smOU16QtWduRT1DM3htjf2tP5O6-tw_9ghCrve8o">Voir le
+            film</a></button>
 
 </body>
 <footer>
@@ -40,7 +41,7 @@
         </select>
     </div>
     <div class="copyright">
-    © DevHTML-IR - 2023
+        © DevHTML-IR - 2023
     </div>
 </footer>
 
