--- a/fr/film.html
+++ b/fr/film.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Film - DevHTML-IR</title>  
+  <title>Film - DevHTML-IR</title>
   <link rel="icon" href="../images/logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="../styles.css">
@@ -15,21 +15,22 @@
   </header>
   <nav>
     <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="movies.html">Film</a></li>
-        <li><a href="tv-series.html">Série</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
-        <li><a href="private.html">Section Privé</a></li>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="movies.html">Film</a></li>
+      <li><a href="tv-series.html">Série</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
+      <li><a href="private.html">Section Privé</a></li>
     </ul>
-</nav>
-  <h2>Film disponible prochainement sur le site:</h2>  
-<p>⊛ Top Gun: Maverick</p>  
-<p>⊛ Titanic</p>
-<p>⊛ Alibi.com</p>
+  </nav>
+  <h2>Film disponible prochainement sur le site:</h2>
+  <p>⊛ Top Gun: Maverick</p>
+  <p>⊛ Titanic</p>
+  <p>⊛ Alibi.com</p>
 
-<h2>Disponible</h2>
-<a class="p" href="Film/a-fond.html">A Fond</a></body>
+  <h2>Disponible</h2>
+  <a class="p" href="Film/a-fond.html">A Fond</a>
+</body>
 <a class="p" href="Film/fast&furious8.html">Fast & Furious 8</a></body>
 <a class="p" href="Film/fast&furious9.html">Fast & Furious 9</a></body>
 <a class="p" href="Film/geostorm.html">Geostorm</a></body>
