--- a/fr/index.html
+++ b/fr/index.html
@@ -26,10 +26,12 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>Sur ce site Web, vous trouverez des films, des séries télévisées et des rediffusions d'émissions télévisées. Les services du site peuvent évoluer ou
+    <p>Sur ce site Web, vous trouverez des films, des séries télévisées et des rediffusions d'émissions télévisées. Les
+        services du site peuvent évoluer ou
         proposer de nouveaux services en fonction de la demande des utilisateurs.</p>
     <h2>Films</h2>
-    <p>Sur la page du film, vous pouvez regarder ou revoir des films sortis en salles pour revivre l'action du film. C'est
+    <p>Sur la page du film, vous pouvez regarder ou revoir des films sortis en salles pour revivre l'action du film.
+        C'est
         à l'abri du virus! Les films sont stockés dans MEGA Cloud.</p>
     <h2>Séries télévisées</h2>
     <p>Sur la page des séries TV, vous trouverez des séries Netflix à regarder sans dépenser d'argent et sans risque de
@@ -48,4 +50,5 @@
         © DevHTML-IR - 2023
     </div>
 </footer>
+
 </html>
