--- a/fr/star-ac-2023.html
+++ b/fr/star-ac-2023.html
@@ -3,12 +3,12 @@
 
 <head>
     <title>Star Academy 2023 - DevHTML-IR</title>
-    <link rel="icon" href="../images/star-ac-2023.jpg" type="image/x-icon">
+    <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
     <script src="../condition.js"></script>
 </head>
 
-<body>
+<body type="star-ac-2023">
     <header>
         <h1>Star Academy 2023</h1>
     </header>
