--- a/en/star-ac-2023.html
+++ b/en/star-ac-2023.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Star Academy 2023 - DevHTML-IR</title>
-    <link rel="icon" href="../images/star-ac-2023.jpg" type="image/x-icon">
+    <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
     <script src="../condition.js"></script>
 </head>
