--- a/en/star-ac-2023.html
+++ b/en/star-ac-2023.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <title>Star Academy 2023 - DevHTML-IR</title>
@@ -8,7 +8,7 @@
     <script src="../condition.js"></script>
 </head>
 
-<body>
+<body type="star-ac-2023">
     <header>
         <h1>Star Academy 2023</h1>
     </header>
@@ -19,30 +19,35 @@
             <li><a href="tv-series.html">TV Series</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
-            <li><a href="private.html">Section Privé</a></li>
+            <li><a href="private.html">Private Section</a></li>
         </ul>
     </nav>
-    <h2>Evolution of academician favoritism rating</h2>
-    <p>Find below the evolution of the favoritism rating of academicians</p>
+    <h2>Evolution of the popularity rating of the academicians</h2>
+    <p>Find below the evolution of the popularity rating of the academicians</p>
     <iframe
-        src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=4873423 10&resourcekey"
+        src="https://docs.google.com/spreadsheets/d/e/2CAIWO3enFvi9wbFx3C07lM_dqq5ebTaaC3DHtLEfhG9FpwL27tnF7XG7BY0gvXCPF4B5hs8Zp0KGDthcMHg/gviz/chartiframe?authuser=0&oid=487342310&resourcekey"
         width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
-    <h2>Survey of student wishes when nominees are announced</h2>
-    <p>Find below the results of the surveys of the wishes of the student eliminated during the next bonus (except for
-        bonus 4).</p>
-    <p>The votes come from the social network
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=2124013759&format=interactive
-width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive        
-width=" 100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <h2>Survey of the student's wishes during the announcement of the nominees</h2>
+    <p>Find below the results of the surveys of the student's wishes eliminated during the next prime (except for prime 4).</p>
+    <p>The votes come from the social network X</p>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=2124013759&format=interactive"
+        width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive"
+        width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive"
+        width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive"
+        width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive"
+        width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+    <iframe
+        src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive"
+        width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
     <footer>
         <div class="lang-select">
             <select onchange="location = this.value;">
