--- a/en/movies.html
+++ b/en/movies.html
@@ -2,48 +2,51 @@
 <html>
 
 <head>
-    <title>Movies - DevHTML-IR</title>
-    <link rel="icon" href="../images/logo.png" type="image/x-icon">
+  <title>Movies - DevHTML-IR</title>
+  <link rel="icon" href="../images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../styles.css">
-    <script src="../condition.js"></script>
+  <link rel="stylesheet" href="../styles.css">
+  <script src="../condition.js"></script>
 </head>
 
 <body>
-    <header>
-        <h1>Movies</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="tv-series.html">TV Series</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
-            <li><a href="private.html">Section Privé</a></li>
-        </ul>
-    </nav>
-    <h2>Movies available soon on the site:</h2>
-    <p>⊛ Fast & Furious 8</p>
-    <p>⊛ Fast & Furious 9</p>
-    <p>⊛ Shazam! (2019)</p>
-    <p>⊛ Taxi 5</p>
-    <p>⊛ Geostorm</p>
-    <p>⊛ Top Gun: Maverick</p>
-    <p>⊛ Alibi.Com</p>
-    <p>⊛ Titanic</p>
+  <header>
+    <h1>Movies</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="movies.html">Movies</a></li>
+      <li><a href="tv-series.html">TV Series</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="star-ac-2023.html">Star Academy 2023</a></li>
+      <li><a href="private.html">Private Section</a></li>
+    </ul>
+  </nav>
+  <h2>Movies coming soon on the site:</h2>
+  <p>⊛ Top Gun: Maverick</p>
+  <p>⊛ Titanic</p>
+  <p>⊛ Alibi.com</p>
+
+  <h2>Available</h2>
+  <a class="p" href="Film/a-fond.html">A Fond</a>
+  <a class="p" href="Film/fast&furious8.html">Fast & Furious 8</a>
+  <a class="p" href="Film/fast&furious9.html">Fast & Furious 9</a>
+  <a class="p" href="Film/geostorm.html">Geostorm</a>
+  <a class="p" href="Film/shazam.html">Shazam !</a>
+  <a class="p" href="Film/taxi-5.html">Taxi 5</a>
 </body>
-</body>
+
 <footer>
-    <div class="lang-select">
-        <select onchange="location = this.value;">
-            <option value="movies.html">English</option>
-            <option value="../fr/film.html">Français</option>
-        </select>
-    </div>
-    <div class="copyright">
-        © DevHTML-IR - 2023
-    </div>
+  <div class="lang-select">
+    <select onchange="location = this.value;">
+      <option value="movies.html">English</option>
+      <option value="../fr/film.html">Français</option>
+    </select>
+  </div>
+  <div class="copyright">
+    © DevHTML-IR - 2023
+  </div>
 </footer>
 
 </html>
