--- a/en/movies/a-fond.html
+++ b/en/movies/a-fond.html
@@ -34,7 +34,7 @@
     <div class="lang-select">
         <select onchange="location = this.value;">
             <option value="/a-fond.html">English</option>
-            <option value="../../fr/Film/a-fond.html">Français</option>
+            <option value="../../fr/film/a-fond.html">Français</option>
         </select>
     </div>
     <div class="copyright">
