--- a/en/movies/alibi.com.html
+++ b/en/movies/alibi.com.html
@@ -28,7 +28,7 @@
     <div class="lang-select">
         <select onchange="location = this.value;">
             <option value="alibi.com.html">English</option>
-            <option value="../../fr/Film/alibi.com.html">Français</option>
+            <option value="../../fr/film/alibi.com.html">Français</option>
         </select>
     </div>
     <div class="copyright">
