--- a/en/movies/fast&furious9.html
+++ b/en/movies/fast&furious9.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Shazam! - DevHTML-IR</title>
+    <title>Fast & Furious 9 - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../styles.css">
     <script src="../../condition.js"></script>
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="title">Shazam!</h1>
+        <h1 class="title">Fast & Furious 9</h1>
     </header>
     <nav>
         <ul>
@@ -23,20 +23,19 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>We all have a superhero inside us, it just takes a bit of magic to bring it out.
-        For 14-year-old Billy Batson, a streetwise foster kid, all it takes is shouting Shazam!
-        to transform into the adult superhero. Teen in a perfect adult body,
-        Shazam revels in this adult version of himself with the recklessness of a child.
-        However, he'll need to master his powers quickly to fight
-        the dark forces of Dr. Thaddeus Sivana.</p>
-    <button><a href="https://mega.nz/file/YcFWSSJB#yT0fCtrPe74thsWzmgaJQL2OuFphH8LZpJAzO66oSQA">Watch the
+    <p>Dom Toretto leads a quiet life with Letty and their son,
+        but they know that danger is always present.
+        He and his team attempt to put an end to a global plot
+        orchestrated by the most skilled assassin and the fastest driver
+        they have ever encountered: Dom's estranged brother.</p>
+    <button><a href="https://mega.nz/file/hdlCRaYA#2Woa6glWtWLcPbrng5gEnKL_05jUdEwPaAoivt7mWv8">Watch the
             movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="shazam.html">English</option>
-            <option value="../../fr/Film/shazam.html">Français</option>
+            <option value="fast&furious9.html">English</option>
+            <option value="../../fr/film/fast&furious9.html">Français</option>
         </select>
     </div>
     <div class="copyright">
