--- a/en/movies/shazam.html
+++ b/en/movies/shazam.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Top Gun: Maverick - DevHTML-IR</title>
+    <title>Shazam! - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../styles.css">
     <script src="../../condition.js"></script>
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="title">Top Gun: Maverick</h1>
+        <h1 class="title">Shazam!</h1>
     </header>
     <nav>
         <ul>
@@ -22,13 +22,21 @@
             <li><a href="../star-ac-2023.html">Star Academy 2023</a></li>
         </ul>
     </nav>
-    <h2 class="soon">Soon</h2>
+    <h2>Synopsis</h2>
+    <p>We all have a superhero inside us, it just takes a bit of magic to bring it out.
+        For 14-year-old Billy Batson, a streetwise foster kid, all it takes is shouting Shazam!
+        to transform into the adult superhero. Teen in a perfect adult body,
+        Shazam revels in this adult version of himself with the recklessness of a child.
+        However, he'll need to master his powers quickly to fight
+        the dark forces of Dr. Thaddeus Sivana.</p>
+    <button><a href="https://mega.nz/file/YcFWSSJB#yT0fCtrPe74thsWzmgaJQL2OuFphH8LZpJAzO66oSQA">Watch the
+            movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="top-gun:maverick.html">English</option>
-            <option value="../../fr/Film/top-gun:maverick.html">Français</option>
+            <option value="shazam.html">English</option>
+            <option value="../../fr/film/shazam.html">Français</option>
         </select>
     </div>
     <div class="copyright">
