--- a/en/movies/titanic.html
+++ b/en/movies/titanic.html
@@ -28,7 +28,7 @@
     <div class="lang-select">
         <select onchange="location = this.value;">
             <option value="titanic.html">English</option>
-            <option value="../../fr/Film/titanic.html">Frnaçais</option>
+            <option value="../../fr/film/titanic.html">Frnaçais</option>
         </select>
     </div>
     <div class="copyright">
