--- a/en/movies/top-gun:maverick.html
+++ b/en/movies/top-gun:maverick.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Geostorm - DevHTML-IR</title>
+    <title>Top Gun: Maverick - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../styles.css">
     <script src="../../condition.js"></script>
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="title">Geostorm</h1>
+        <h1 class="title">Top Gun: Maverick</h1>
     </header>
     <nav>
         <ul>
@@ -22,19 +22,13 @@
             <li><a href="../star-ac-2023.html">Star Academy 2023</a></li>
         </ul>
     </nav>
-    <h2>Synopsis</h2>
-    <p>After natural disasters threaten the Earth,
-        scientists create satellites that can control the climate.
-        When these satellites malfunction, a designer must work hand in hand
-        with his brother to save the world from a devastating storm.</p>
-    <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Watch the
-            movie</a></button>
+    <h2 class="soon">Soon</h2>
 </body>
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="geostorm.html">English</option>
-            <option value="../../fr/Film/geostorm.html">Français</option>
+            <option value="top-gun:maverick.html">English</option>
+            <option value="../../fr/film/top-gun:maverick.html">Français</option>
         </select>
     </div>
     <div class="copyright">
