--- a/fr/film/alibi.com.html
+++ b/fr/film/alibi.com.html
@@ -31,7 +31,7 @@
     <div class="lang-select">
         <select onchange="location = this.value;">
             <option value="alibi.com.html">Français</option>
-            <option value="../../en//movies/alibi.com.html">English</option>
+            <option value="../../en/movies/alibi.com.html">English</option>
         </select>
     </div>
     <div class="copyright">
