--- a/en/movies/geostorm.html
+++ b/en/movies/geostorm.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Fast & Furious 9 - DevHTML-IR</title>
+    <title>Geostorm - DevHTML-IR</title>
     <link rel="icon" href="../../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../../styles.css">
     <script src="../../condition.js"></script>
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1 class="title">Fast & Furious 9</h1>
+        <h1 class="title">Geostorm</h1>
     </header>
     <nav>
         <ul>
@@ -23,19 +23,18 @@
         </ul>
     </nav>
     <h2>Synopsis</h2>
-    <p>Dom Toretto leads a quiet life with Letty and their son,
-        but they know that danger is always present.
-        He and his team attempt to put an end to a global plot
-        orchestrated by the most skilled assassin and the fastest driver
-        they have ever encountered: Dom's estranged brother.</p>
-    <button><a href="https://mega.nz/file/hdlCRaYA#2Woa6glWtWLcPbrng5gEnKL_05jUdEwPaAoivt7mWv8">Watch the
+    <p>After natural disasters threaten the Earth,
+        scientists create satellites that can control the climate.
+        When these satellites malfunction, a designer must work hand in hand
+        with his brother to save the world from a devastating storm.</p>
+    <button><a href="https://mega.nz/file/sJFUgJJY#CtbiNk6zCI78BvATdecD7RG5SM3fkOO_IrFfIsi9VaE">Watch the
             movie</a></button>
 </body>
 <footer>
     <div class="lang-select">
         <select onchange="location = this.value;">
-            <option value="fast&furious9.html">English</option>
-            <option value="../../fr/Film/fast&furious9.html">Français</option>
+            <option value="geostorm.html">English</option>
+            <option value="../../fr/film/geostorm.html">Français</option>
         </select>
     </div>
     <div class="copyright">
