--- a/en/movies.html
+++ b/en/movies.html
@@ -29,12 +29,12 @@
   <p>⊛ Alibi.com</p>
 
   <h2>Available</h2>
-  <a class="p" href="Film/a-fond.html">A Fond</a>
-  <a class="p" href="Film/fast&furious8.html">Fast & Furious 8</a>
-  <a class="p" href="Film/fast&furious9.html">Fast & Furious 9</a>
-  <a class="p" href="Film/geostorm.html">Geostorm</a>
-  <a class="p" href="Film/shazam.html">Shazam !</a>
-  <a class="p" href="Film/taxi-5.html">Taxi 5</a>
+  <a class="p" href="movies/a-fond.html">A Fond</a>
+  <a class="p" href="movies/fast&furious8.html">Fast & Furious 8</a>
+  <a class="p" href="movies/fast&furious9.html">Fast & Furious 9</a>
+  <a class="p" href="movies/geostorm.html">Geostorm</a>
+  <a class="p" href="movies/shazam.html">Shazam !</a>
+  <a class="p" href="movies/taxi-5.html">Taxi 5</a>
 </body>
 
 <footer>
