--- a/fr/film.html
+++ b/fr/film.html
@@ -31,11 +31,11 @@
   <h2>Disponible</h2>
   <a class="p" href="Film/a-fond.html">A Fond</a>
 </body>
-<a class="p" href="Film/fast&furious8.html">Fast & Furious 8</a></body>
-<a class="p" href="Film/fast&furious9.html">Fast & Furious 9</a></body>
-<a class="p" href="Film/geostorm.html">Geostorm</a></body>
-<a class="p" href="Film/shazam.html">Shazam !</a></body>
-<a class="p" href="Film/taxi-5.html">Taxi 5</a></body>
+<a class="p" href="film/fast&furious8.html">Fast & Furious 8</a></body>
+<a class="p" href="film/fast&furious9.html">Fast & Furious 9</a></body>
+<a class="p" href="film/geostorm.html">Geostorm</a></body>
+<a class="p" href="film/shazam.html">Shazam !</a></body>
+<a class="p" href="film/taxi-5.html">Taxi 5</a></body>
 
 <footer>
   <div class="lang-select">
