Test Private Page

--- a/fr/star-ac-2023.html
+++ b/fr/star-ac-2023.html
@@ -8,7 +8,7 @@
     <script src="../condition.js"></script>
 </head>
 
-<body type="star-ac-2023">
+<body>
     <header>
         <h1>Star Academy 2023</h1>
     </header>
@@ -32,22 +32,22 @@
 <p>Les votes proviennent du réseau social X</p>
 <iframe
 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=2124013759&format=interactive
-width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+width="100%" height="200px" frameborder="0" scrolling="no"></iframe>
 <iframe
 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+width="100%" height="200px" frameborder="0" scrolling="no"></iframe>
 <iframe
 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+width="100%" height="200px" frameborder="0" scrolling="no"></iframe>
 <iframe
 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+width="100%" height="200px" frameborder="0" scrolling="no"></iframe>
 <iframe
 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive
-width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+width="100%" height="200px" frameborder="0" scrolling="no"></iframe>
 <iframe
 src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRh6E9Q83z8SbuAToHyG9TqAUp6y8RA1yhr72xG3tA39d_hsXyTCT83bBCi63wPJmU2cLpbRW9GRALl/pubchart?oid=1870826668&format=interactive        
-width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
+width="100%" height="200px" frameborder="0" scrolling="no"></iframe>
 <footer>
         <div class="lang-select">
             <select onchange="location = this.value;">
