--- a/en/private.html
+++ b/en/private.html
@@ -60,7 +60,7 @@
       if (username === "test" && password === "test") {
         alert("Connexion réussie!");
         // Rediriger vers la page privé/index.html
-        window.location.href = "privé/index.html";
+        window.location.href = "private/index.html";
         return false; // Empêcher la soumission du formulaire
       } else {
         alert("Nom d'utilisateur ou mot de passe incorrect!");
