--- a/fr/privé/index.html
+++ b/fr/privé/index.html
@@ -1,18 +1,14 @@
 <script>
-    // Fonction pour vérifier si l'utilisateur est connecté
-    function checkAuthentication() {
-      var isAuthenticated = localStorage.getItem("authenticated");
-  
-      // Si l'utilisateur n'est pas connecté, afficher un message et rediriger vers la page de connexion
-      if (!isAuthenticated) {
-        alert("Pour accéder à cette page, vous devez vous connecter.");
-        window.location.href = "../private.html"; // Assurez-vous de remplacer "login.html" par le chemin réel de votre page de connexion
-      }
-    }
-  
-    // Appeler la fonction au chargement de la page
-    document.addEventListener("DOMContentLoaded", function () {
-      checkAuthentication();
-    });
+function checkAuthentication() {
+  var isAuthenticated = localStorage.getItem("authenticated");
+  console.log("Is Authenticated:", isAuthenticated);
+
+  if (!isAuthenticated) {
+    console.log("User not authenticated, redirecting...");
+    alert("Pour accéder à cette page, vous devez vous connecter.");
+    window.location.href = "../private.html";
+  }
+}
+
   </script>
   
